[package]
name = "geist_bootloader"
version = "0.1.7"
edition = "2021"
description = "bootloader & cli for controlling Geist"
license = "MIT"
documentation = "https://docs.faust.computer"
homepage = "https://faust.computer"
repository = "https://github.com/faust-computer/geist_bootloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
# lets add derive feature to clap
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "geist"
path = "src/main.rs"
